--- a/assets/css/index-style.css
+++ b/assets/css/index-style.css
@@ -1,6 +1,7 @@
 @import url("./header.css");
 @import url("./top-bar.css");
 @import url("./news-main.css");
+@import url("./carousel.css");
 @import url("/assets/css/footer.css");
 
 :root{
@@ -10,10 +11,12 @@
   --font-color-subscribe: #326891;
   --color-top-bar-border: #e1e1e1;
   --color-top-bar: #eeeeee;
-  --color-footer-border: #e1e1e1;
+  --color-footer-border: #aeaeae;
   --color-standart: #000000;
   --font-label-footer: 'Libre Franklin';
   --color-label-footer: gray;
   --color-news-main-live: #d0021b;
   --color-news-abstract: #666360;
+  --color-advertisement: #666360;
+  --color-back-advertisement: #666360;
 } 
