Implementation main page

--- a/assets/css/index-style.css
+++ b/assets/css/index-style.css
@@ -19,4 +19,5 @@
   --color-news-abstract: #666360;
   --color-advertisement: #666360;
   --color-back-advertisement: #666360;
+  --color-luminous: #2EE59D
 } 
