--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -16,8 +16,7 @@ footer{
 }
 
 .footer__menu{
-
-    display: inline-block;
+    border-top: 0.015rem solid rgba(0, 0, 0, 0.25);
     padding-left: 1em;
     cursor: pointer;
 }
@@ -61,6 +60,9 @@ footer{
 }
 
 .copyright-footer__text{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     opacity: 0.8;
     font-size: 13px;
     font-weight: bold;
@@ -85,5 +87,8 @@ footer{
 }
 
 .other-info-footer__item a{
+  color: var(--color-advertisement);
   text-decoration: none;
+  font-weight: 700;
+  font-size: 0.8rem;
 }
