--- a/assets/css/news-main.css
+++ b/assets/css/news-main.css
@@ -6,10 +6,10 @@
 }
 
 .visitUkraine{
-  background: var(--color-back-advertisement);
+  background: var(--color-top-bar-border);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
-  padding-bottom: 6rem;
+  padding-bottom: 2rem;
 }
 
 .title__news1 a, .title__news3 a{
@@ -119,7 +119,45 @@
   font-size: 23px;
 }
 
-.ukrania-Announcement{
-  float: left;
-  clear:both;
+.options__buttons{
+  display: flex;
+  justify-content: space-around;
+  
 }
+
+.image__starts{
+  margin-top: 2rem;
+}
+
+.button__item{
+  width: 2rem;
+  height: 2rem;
+}
+
+.send{
+  width: 140px;
+  height: 45px;
+  font-family: var(--font-top-bar);
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: var(--color-standart);
+  background-color: var(--header-color);
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+}
+
+.send:hover{
+  background-color: var(--color-luminous);
+  box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
+}
+
+
+
