--- a/assets/css/subscribe/subscribe-style.css
+++ b/assets/css/subscribe/subscribe-style.css
@@ -1,4 +1,5 @@
 @import url("../header.css");
+@import url("./header-complement.css");
 @import url("./subscribe-top.css");
 @import url("./benefit.css");
 @import url("./plan.css");
