--- a/assets/css/index-style.css
+++ b/assets/css/index-style.css
@@ -2,7 +2,7 @@
 @import url("./top-bar.css");
 @import url("./news-main.css");
 @import url("./carousel.css");
-@import url("/assets/css/footer.css");
+@import url("./footer.css");
 
 :root{
   --header-color: #ffffff;
