--- a/assets/css/stylesForms.css
+++ b/assets/css/stylesForms.css
@@ -654,7 +654,7 @@ form label, form legend{
     font-size: 18px;
     border: none;
     border-radius: 10px;
-    transition: 1s all;
+    transition: 5s background;
     cursor: pointer;
 }
 
